# rust-htmx-askama

./: .gitignore  Cargo.toml  README.md
src/: main.rs  templates.rs
templates/: controls.html  index.html  timer.html
